--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
       "plugin:vue/essential",
       "@vue/airbnb"
     ],
-    "rules": {},
+    "rules": {
+      "no-shadow": 0,
+      "no-console": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
