--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -36,7 +37,10 @@
     ],
     "rules": {
       "no-shadow": 0,
-      "no-console": 0
+      "no-console": 0,
+      "no-param-reassign": 0,
+
+      "no-unused-vars": 0
     },
     "parserOptions": {
       "parser": "babel-eslint"
